--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
+
+
+spring.application.name=springboot-demo
+server.port=8080
+server.tomcat.uri-encoding=utf-8
+ 
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
+ 
